# heap-mastery-course

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LEARNING_PATH.md  LICENSE  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_PROGRESS.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  SUGGEST.md  TESTING_SUMMARY.md  TEST_REPORT.md  docker-compose.yml  plan.txt  test_all_exploits.py
common/include/: debug_utils.h  exploit_utils.h  heap_utils.h
common/src/: debug_utils.c  exploit_utils.c  glibc_info.c  heap_utils.c
docs/: 00_introduction.md  01_prerequisites.md  02_environment_setup.md  03_debugging_tools.md  VISUAL_DIAGRAMS.md
level00_setup/: CMakeLists.txt  README.md  check_env.c
level01_overflow/: CMakeLists.txt  README.md
level01_overflow/answer/: exploit_solution.py
level01_overflow/challenge/: flag.txt.template  vuln.c
level01_overflow/docs/: hints.md  theory.md  walkthrough.md
level01_overflow/solution/: exploit.c  exploit.py  solver.py
level02_uaf/: CMakeLists.txt  README.md
level02_uaf/challenge/: exploit_solution.py  vuln.c
level02_uaf/docs/: hints.md  theory.md  walkthrough.md
level02_uaf/solution/: PROBLEM_ANALYSIS.md  exploit_solution.py
level03_fastbin_dup/: CMakeLists.txt  README.md
level03_fastbin_dup/challenge/: vuln.c
level03_fastbin_dup/docs/: hints.md  theory.md  walkthrough.md
level03_fastbin_dup/solution/: exploit_solution.py
level04_tcache/: CMakeLists.txt  README.md
level04_tcache/answer/: exploit_solution.py
level04_tcache/challenge/: vuln.c  (+1 more)
level05_heap_spray/: CMakeLists.txt  README.md
level06_feng_shui/: CMakeLists.txt  README.md
level07_advanced/: CMakeLists.txt  README.md
scripts/: check_env.py  install_dependencies.sh
tests/: CMakeLists.txt  test_all_levels.sh  test_compile.sh  verify_all.sh
(+14 files in other folders)
